; ModuleID = '/home/carl/AnghaBench/sqlcipher/tool/extr_showwal.c_getContent.c'
source_filename = "/home/carl/AnghaBench/sqlcipher/tool/extr_showwal.c_getContent.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@fd = common dso_local global i32 0, align 4
@SEEK_SET = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i32, i32)* @getContent to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @getContent(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  %6 = load i32, i32* %4, align 4
  %7 = call i8* @malloc(i32 %6)
  store i8* %7, i8** %5, align 8
  %8 = load i8*, i8** %5, align 8
  %9 = icmp eq i8* %8, null
  br i1 %9, label %10, label %12

10:                                               ; preds = %2
  %11 = call i32 (...) @out_of_memory()
  br label %12

12:                                               ; preds = %10, %2
  %13 = load i32, i32* @fd, align 4
  %14 = load i32, i32* %3, align 4
  %15 = load i32, i32* @SEEK_SET, align 4
  %16 = call i32 @lseek(i32 %13, i32 %14, i32 %15)
  %17 = load i32, i32* @fd, align 4
  %18 = load i8*, i8** %5, align 8
  %19 = load i32, i32* %4, align 4
  %20 = call i32 @read(i32 %17, i8* %18, i32 %19)
  %21 = load i8*, i8** %5, align 8
  ret i8* %21
}

declare dso_local i8* @malloc(i32) #1

declare dso_local i32 @out_of_memory(...) #1

declare dso_local i32 @lseek(i32, i32, i32) #1

declare dso_local i32 @read(i32, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
